# AndroidFrameGenv1

./: build.sh
.github/workflows/: blank.yml  descompactar-zip.yml  gradle.yml  main.yml  main22.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compute_shader.cpp  compute_shader.h  frame_generator.cpp  frame_generator.h  mobfgsr_jni.cpp  offscreen_renderer.cpp  offscreen_renderer.h  texture.cpp  texture.h
app/src/main/java/com/mobfgsr/framegeneration/: AdvancedSettingsFragment.kt  BasicSettingsFragment.kt  GameAdapter.kt  MainActivity.kt  SettingsPagerAdapter.kt
app/src/main/res/layout/: activity_main.xml  fragment_advanced_settings.xml  fragment_basic_settings.xml  item_game.xml
app/src/main/res/values/: colors.xml  drawables.xml  strings.xml
app/src/main/res/xml/: preferences.xml
